--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,12 @@
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{% url 'manufacturers' %}">Manufacturers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{% url 'manufacturers' %}">Categories</a>
+            </li>
 
             {% if user.is_authenticated %}
             <li class="nav-item"><a class="nav-link" href="#">Authenticated</a></li>
