--- a/templates/base.html
+++ b/templates/base.html
@@ -30,11 +30,14 @@
               <a class="nav-link" aria-current="page" href="{% url 'manufacturers' %}">Manufacturers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{% url 'manufacturers' %}">Categories</a>
+              <a class="nav-link" aria-current="page" href="{% url 'categories' %}">Categories</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{% url 'tools' %}">Tools</a>
             </li>
 
             {% if user.is_authenticated %}
-            <li class="nav-item"><a class="nav-link" href="#">Authenticated</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'user-tools' %}">My tools</a></li>
             {% if user.is_superuser %}
             <li class="nav-item"><a class="nav-link" href="#">Auth superuser</a></li>
             {% endif %}
@@ -44,9 +47,9 @@
               </svg>
               {{ user.get_username }}</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#">Logout</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
             {% else %}
-            <li class="nav-item"><a class="nav-link" href="#">Log in</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'login'%}?next={{request.path}}">Log in</a></li>
             {% endif %}
 
           </ul>
