starting develop create, update.

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -9,5 +9,6 @@
       <p>{{ c.tool_set.all|join:"<br> " }}</p>
     </li>
     {% endfor %}
-
+<br>
+<a class="btn btn-outline-secondary btn-sm" href="{% url 'home' %}">Home</a>
 {% endblock %}
