--- a/templates/manufacturer.html
+++ b/templates/manufacturer.html
@@ -6,4 +6,6 @@
     <hr>
         <p>{{ manufacturer.description }}</p>
     </div>
+<br>
+<a class="btn btn-outline-secondary btn-sm" href="{% url 'home' %}">Home</a>
 {% endblock %}
