--- a/templates/user_tools.html
+++ b/templates/user_tools.html
@@ -75,7 +75,8 @@
     <p>There is no tools in our page, sorry :(.</p>
   {% endif %}
 {% endif %}
-
+<br>
+<a class="btn btn-outline-secondary btn-sm" href="{% url 'home' %}">Home</a>
 
 
 {% endblock %}
