--- a/templates/base.html
+++ b/templates/base.html
@@ -39,21 +39,20 @@
             {% if user.is_authenticated %}
             <li class="nav-item"><a class="nav-link" href="{% url 'user-tools' %}">My tools</a></li>
             {% if user.is_superuser %}
-            <li class="nav-item"><a class="nav-link" href="#">Auth superuser</a></li>
+             <li class="nav-item"><a class="nav-link" href="{% url 'toolcopy-create'%}">New tool copy</a></li>
             {% endif %}
-            <li class="nav-item"><a class="nav-link" href="#">
-              <svg class="bi bi-person" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" d="M13 14s1 0 1-1-1-4-6-4-6 3-6 4 1 1 1 1h10zm-9.995-.944v-.002.002zM3.022 13h9.956a.274.274 0 00.014-.002l.008-.002c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664a1.05 1.05 0 00.022.004zm9.974.056v-.002.002zM8 7a2 2 0 100-4 2 2 0 000 4zm3-2a3 3 0 11-6 0 3 3 0 016 0z" clip-rule="evenodd"/>
-              </svg>
+            <li class="nav-item"><a class="nav-link" href="{% url 'user_profile'%}">
+              <img src="{{ user.image.url }}" alt="" width="30" height="24">
               {{ user.get_username }}</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'logout'%}">Logout</a></li>
             {% else %}
-            <li class="nav-item"><a class="nav-link" href="{% url 'login'%}?next={{request.path}}">Log in</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'login'%}">Log in</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'sign_up'%}">Sign up</a></li>
             {% endif %}
 
           </ul>
-          <form action="#" method="get"class="d-flex">
+          <form action="#" method="get" class="d-flex">
             <input name="query" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-secondary" type="submit">Search</button>
           </form>
