--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<h1>Log in</h1>
   {% if form.errors %}
     <p>Login error. Please try again!</p>
   {% endif %}
