--- a/templates/tool.html
+++ b/templates/tool.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<img src="{{ tool.image.url }}" class="card-img-top" style="margin-bottom: 20px;">
-<h1>{{ tool.title }}</h1>
+<img src="{{ tool.image.url }}"  width="300" height="auto" style="margin-bottom: 20px;">
+<h4>{{ tool.title }}</h4>
 <br>
 
   <p><strong>Manufacturer:</strong> <a href="{% url 'manufacturer' tool.manufacturer.pk %}">{{ tool.manufacturer }}</a></p>
@@ -24,4 +24,6 @@
       <p class="text-muted"><strong>Id:</strong> {{ toolcopy.id }}</p>
     {% endfor %}
   </div>
+<br>
+<a class="btn btn-outline-secondary btn-sm" href="{% url 'home' %}">Home</a>
 {% endblock %}
