--- a/templates/tools.html
+++ b/templates/tools.html
@@ -31,7 +31,7 @@
             <a class="btn btn-outline-danger btn-sm" href="#">Delete</a>
             {% else %}
             {% if copy.status == 'a' %}
-            <a class="btn btn-outline-secondary btn-sm" href="#">Reserve</a>
+            <a class="btn btn-outline-secondary btn-sm" href="{% url 'toolcopy-create-user' copy.id %}">Reserve</a>
             {% endif %}
             {% endif %}
             {% endfor %}
