--- a/templates/base.html
+++ b/templates/base.html
@@ -37,10 +37,13 @@
             </li>
 
             {% if user.is_authenticated %}
-            <li class="nav-item"><a class="nav-link" href="{% url 'user-tools' %}">My tools</a></li>
             {% if user.is_superuser %}
-             <li class="nav-item"><a class="nav-link" href="{% url 'toolcopy-create'%}">New tool copy</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'user-tools' %}">All tool copies</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'toolcopy-create'%}">New tool copy</a></li>
+            {% else %}
+            <li class="nav-item"><a class="nav-link" href="{% url 'user-tools' %}">My tools</a></li>
             {% endif %}
+
             <li class="nav-item"><a class="nav-link" href="{% url 'user_profile'%}">
               <img src="{{ user.image.url }}" alt="" width="30" height="24">
               {{ user.get_username }}</a>
