--- a/templates/user_tools.html
+++ b/templates/user_tools.html
@@ -29,8 +29,8 @@
             <li><strong class="{% if toolcopy.is_overdue %}text-danger{% endif %}">Due back: {{ toolcopy.due_back }}</strong></li>
 
             <div>
-              <a class="btn btn-outline-secondary btn-sm" href="#">Edit</a>
-             <a class="btn btn-outline-danger btn-sm" href="#">Delete</a>
+              <a class="btn btn-outline-secondary btn-sm" href="{% url 'toolcopy-update' toolcopy.id %}">Edit</a>
+              <a class="btn btn-outline-danger btn-sm" href="#">Delete</a>
             </div>
           </div>
         </div>
