Some edit/reserve/cancel reserve mistakes solved

--- a/templates/toolcopy_update_cancel_reserve_form.html
+++ b/templates/toolcopy_update_cancel_reserve_form.html
@@ -6,9 +6,10 @@
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Cancel reservation reservation</legend>
             {{ form }}
+            {{ toolcopy.tool }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Cancel reservation</button>
+            <button class="btn btn-outline-secondary btn-sm" type="submit">Cancel reservation</button>
         </div>
     </form>
     </div>
