--- a/templates/toolcopy_update_reserve_form.html
+++ b/templates/toolcopy_update_reserve_form.html
@@ -6,10 +6,10 @@
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">New tool reservation</legend>
             {{ form }}
-
+            {{ toolcopy.tool }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Reserve for 10 days</button>
+            <button class="btn btn-outline-secondary btn-sm" type="submit">Reserve for 10 days</button>
         </div>
     </form>
     </div>
