--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Categories</h1>
+  <h1>Categories:</h1>
   {% for c in categories %}
     <hr>
     <li>
