--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>NEW IFSP </h1>
-  <p>Welcome to my new future project!</p>
-
-  {% endblock %}
+  <h1>Tools rent</h1>
+  <p>Welcome to tools rent reservation page!</p>
+  <p>Today we offer:</p>
+  <ul>
+    <li><strong>Manufacturers:</strong> {{ num_manufacturers }}</li>
+    <li><strong>Tools:</strong> {{ num_tools }}</li>
+    <li><strong>Tools copies:</strong> {{ num_toolcopy }}</li>
+    <li><strong>Tools copies available:</strong> {{ num_toolcopy_available }}</li>
+  </ul>
+  <p>Your visits: {{ num_visits }}</p>
+{% endblock %}
