--- a/templates/user_tools.html
+++ b/templates/user_tools.html
@@ -17,7 +17,7 @@
           <img src="{% static 'img/no-image.jpg' %}" class="card-img-top">
           {% endif %}
           <div class="card-body">
-            <a href="#">{{ toolcopy.tool }}</a>
+            <a href="{% url 'tool' toolcopy.tool.pk %}">{{ toolcopy.tool }}</a>
             <hr>
             <p class="{% if toolcopy.status == 'a' %}text-success{% elif toolcopy.status == 'b' %}text-danger{% else %}text-warning{% endif %}">
             {% if toolcopy.status == 'a' %}
@@ -42,7 +42,7 @@
   {% endif %}
 {% else %}
 {% if toolcopies %}
-<h1>My borrowwed or reserved tools:</h1>
+<h1>My borrowed or reserved tools:</h1>
 <hr>
   <div class="row">
     {% for toolcopy in toolcopies %}
@@ -54,7 +54,7 @@
           <img src="{% static 'img/no-image.jpg' %}" class="card-img-top">
           {% endif %}
           <div class="card-body">
-            <a href="#">{{ toolcopy.tool }}</a>
+            <a href="{% url 'tool' toolcopy.tool.pk %}">{{ toolcopy.tool }}</a>
             <hr>
             <p class="{% if toolcopy.status == 'a' %}text-success{% elif toolcopy.status == 'b' %}text-danger{% else %}text-warning{% endif %}">
             {% if toolcopy.status == 'a' %}
