some fine tuning done

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,8 @@
   <p>Today we offer:</p>
   <ul>
     <li><strong>Manufacturers:</strong> {{ num_manufacturers }}</li>
-    <li><strong>Tools:</strong> {{ num_tools }}</li>
+    <li><strong>Categories:</strong> {{ num_category }}</li>
+    <li><strong>Tools:</strong> {{ num_tool }}</li>
     <li><strong>Tools copies:</strong> {{ num_toolcopy }}</li>
     <li><strong>Tools copies available:</strong> {{ num_toolcopy_available }}</li>
   </ul>
