--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}">
-            <img src="{% static '/img/bs.jpeg' %}" alt="" width="30" height="24">
+            <img src="{% static '/img/for_rent.png' %}" alt="" width="30" height="24">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
             {% endif %}
 
             <li class="nav-item"><a class="nav-link" href="{% url 'user_profile'%}">
-              <img src="{{ user.image.url }}" alt="" width="30" height="24">
+              <img class="rounded-circle account-img" src="{{ user.image.url }}" alt="" width="30" height="24">
               {{ user.get_username }}</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="{% url 'logout'%}">Logout</a></li>
