Home page updated

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 {% load static %}
-  <h1>Tools rent</h1>
-  <p>Welcome to tools rent reservation page!</p>
+  <h1>Welcome to the best tools rent reservation page!</h1>
+  <p></p>
   <div class="row">
     <div class="col-md-4 d-flex align-items-stretch">
       <div class="card mb-4 shadow-sm">
         <div class="card-body">
-          <h2>You're on the right way. You're visiting the best tool rent service page!</h2>
+          <h2>You're on the right way. Today we offer:</h2>
           <hr>
-          <p>Today:</p>
           <ul>
           <li><strong>Manufacturers:</strong> {{ num_manufacturers }}</li>
           <li><strong>Categories:</strong> {{ num_category }}</li>
@@ -20,14 +19,29 @@
           <li><strong>Tools copies borrowed:</strong> {{ num_toolcopy_borrowed }}</li>
           <li><strong>Number of this page users:</strong> {{ num_users }}</li>
         </ul>
+          <hr>
         <p>Your visits: {{ num_visits }}</p>
         </div>
       </div>
     </div>
     <div class="col-md-4 d-flex align-items-stretch">
       <div class="card mb-4 shadow-sm">
-        <img src="{% static 'img/no-image.jpg' %}" class="card-img-top">
+        <img src="{% static 'img/Tools-with-Helmet.jpg' %}" class="card-img-top">
         <div class="card-body">
+          <h2>Just 3 steps left:</h2>
+          <ul>
+            <li><h2>Reserve</h2></li>
+            <li><h2>Come</h2></li>
+            <li><h2>Get!</h2></li>
+          </ul>
+
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 d-flex align-items-stretch">
+      <div class="card mb-4 shadow-sm">
+        <div class="card-body">
+          <h2>We are:</h2>
           <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sapien sapien, efficitur nec magna at, tincidunt convallis augue. In egestas eros in dictum finibus. Donec vehicula cursus pretium. Mauris a dolor eget justo consequat cursus. Nunc mollis nibh a risus congue congue. Donec egestas fermentum risus in molestie. Donec semper faucibus facilisis. Maecenas ac erat justo. Praesent eget ipsum at eros luctus consectetur. Etiam posuere vulputate mollis. Ut viverra pulvinar turpis at aliquet. Suspendisse ullamcorper egestas leo non tristique. Suspendisse potenti.</p>
         </div>
       </div>
