user image problem in Sign up form solved

--- a/templates/registration/user_profile.html
+++ b/templates/registration/user_profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>User profile</h1>
+<h1>Hey hey hey, it's me:</h1>
 <hr>
     <img class="rounded-circle account-img" alt="" width="150" height="auto" src="{{ user.image.url }}">
 <br>
