--- a/templates/home.html
+++ b/templates/home.html
@@ -30,11 +30,11 @@
       <div class="card mb-4 shadow-sm">
         <img src="{% static 'img/Tools-with-Helmet.jpg' %}" class="card-img-top">
         <div class="card-body">
-          <h2>Just 3 steps left:</h2>
           <ul>
-            <li><h2>Reserve</h2></li>
+            <li><h2>Choose a tool</h2></li>
+            <li><h2>Reserve it</h2></li>
             <li><h2>Come</h2></li>
-            <li><h2>Get!</h2></li>
+            <li><h2>Get it!</h2></li>
           </ul>
 
         </div>
@@ -43,8 +43,14 @@
     <div class="col-md-4 d-flex align-items-stretch">
       <div class="card mb-4 shadow-sm">
         <div class="card-body">
-          <h2>We are:</h2>
-          <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sapien sapien, efficitur nec magna at, tincidunt convallis augue. In egestas eros in dictum finibus. Donec vehicula cursus pretium. Mauris a dolor eget justo consequat cursus. Nunc mollis nibh a risus congue congue. Donec egestas fermentum risus in molestie. Donec semper faucibus facilisis. Maecenas ac erat justo. Praesent eget ipsum at eros luctus consectetur. Etiam posuere vulputate mollis. Ut viverra pulvinar turpis at aliquet. Suspendisse ullamcorper egestas leo non tristique. Suspendisse potenti.</p>
+         <ul>
+            <li><h2>Best tools</h2></li>
+            <li><h2>Wide assortment</h2></li>
+            <li><h2>One place</h2></li>
+         </ul>
+           <br>
+          <hr>
+           <h2 class="text-center">Try us!</h2>
         </div>
       </div>
     </div>
